@@ -1,3 +1,11 @@
+Thu Jul 16 23:32:16 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
+
+	* ext/tk/extconf.rb,ext/tk/config_list.in: ignore paths which includes
+	  white space characters on Windows.[ruby-dev:38794]
+
+	* ext/tk/lib/tk.rb: works on Cygwin (limitation:: Tk.mainloop works on
+	  the main thread only).
+
 Wed Jul 15 06:21:50 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
 
 	* ext/tk/extconf.rb: --with-{tcl,tk}-dir doesn't work.[ruby-dev:38782]
